# simse

./: .gitignore  Cargo.toml  config.toml  config.yaml  rust-toolchain.toml
simse/: Cargo.toml
simse-backend/: Cargo.toml
simse-backend/simse/: Cargo.toml
simse-backend/simse/src/: main.rs
simse-config/: Cargo.toml
simse-frontend/: Cargo.toml  index.html
simse-server/: Cargo.toml
simse-server/src/: main.rs
simse-web/: package-lock.json
simse/src/: main.rs
simse_config/: Cargo.toml
src/: args.rs  config.rs  keys.rs  main.rs
src/notifiers/: mod.rs  smtp.rs
src/notify/: mod.rs
src/routes/: mod.rs
src/routes/federation/: routes.rs
src/routes/key/: mod.rs  routes.rs
xtask/: Cargo.toml
xtask/src/: main.rs
