[workspace.package]
version = "0.1.0"
authors = ["Zavier D. <zavier.a.divelbiss@proton.me>"]
edition = "2021"
license = "AGPL-3.0-only"


[workspace]
members = ["simse-server"]
resolver = "2"

[profile.dev]
opt-level = 0
overflow-checks = true
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1
