[package]
name = "simse"
version = "0.1.0"
authors = ["Zavier D. <zavier.a.divelbiss@proton.me>"]
edition = "2021"
license = "AGPL-3.0-only"


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

clap = { version = "*", features = ["derive", "env"] }

tracing = "*"
tracing-subscriber = "*"
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "fs",
    "net",
    "io-util",
    "signal",
] }
axum = "*"
reqwest = { version = "*", default-features = false, features = [
    "native-tls",
    "gzip",
    "json",
] }

lettre = { version = "*", default-features = false, features = [
    "builder",
    "smtp-transport",
    "hostname",
    "tokio1",
    "native-tls",
    "tokio1-native-tls",
    "serde",
    "tracing",
] }


rand = "*"
ed25519-dalek = "*"
base64 = "*"

versions = { version = "*", features = ["serde"] }
once_cell = "*"
regex = "*"
anyhow = "*"
