[package]
name = "simse"
version = "0.1.0"
edition = "2021"

[dependencies.simse_config]
path = "../simse_config"

[dependencies]
yew = { version = "*", features = ["csr"] }
serde = { version = "*", features = ["derive"] }
versions = { version = "*", features = ["serde"] }
lettre = { version = "*", default-features = false, features = [
    "builder",
    "smtp-transport",
    "hostname",
    "rustls-tls",
    "tokio1-rustls-tls",
    "serde",
    "tracing",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "fs",
    "net",
    "io-util",
] }
tokio-rustls = "*"
webpki-roots = "*"
axum = "*"
tracing = "*"
tracing-subscriber = "*"
notify = "*"
regex = "*"
once_cell = "*"
chrono = "*"
base64 = "*"
anyhow = "*"
toml = "*"
