[package]
name = "simse_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
versions = { version = "*", features = ["serde"] }
lettre = { version = "*", default-features = false, features = ["serde"] }
anyhow = "*"
toml = "*"
